[tool.poetry]
name = "homeassistant-bpost-integration"
version = "0.2.0"
description = "Integration of the my bpost app for Home Assistant"
authors = ["Sam Debruyn <sam@debruyn.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
homeassistant = ">=2024.6.0,<2025.2.0"
curl-cffi = ">=0.11.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
atomic = true
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
